--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@headlessui/react": "^2.2.1",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.3",
+    "i18next": "^25.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.5.1",
     "react-router-dom": "^7.5.0",
     "tailwindcss": "^4.1.3"
   },
